--- a/task1/NuGetYOLO/NuGetYOLO/NuGetYOLO.csproj
+++ b/task1/NuGetYOLO/NuGetYOLO/NuGetYOLO.csproj
@@ -9,6 +9,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>NuGetYOLO</Title>
     <Company>$(Authors) </Company>
+    <Version>$(VersionPrefix)1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
