--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,4 @@ _NCrunch*
 /task1/NuGetYOLO/.vs/NuGetYOLO/FileContentIndex/read.lock
 /task1/NuGetYOLO/.vs/NuGetYOLO/v17/.futdcache.v2
 /task1/NuGetYOLO/.vs/NuGetYOLO/DesignTimeBuild/.dtbcache.v2
+/task4/WebApplication/WebApplication/tinyyolov2-8.onnx
